@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: T07SteppingAction.hh,v 1.1 1999-01-08 16:35:10 gunter Exp $
+// $Id: T07SteppingAction.hh,v 1.2 1999-04-17 07:00:39 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -24,9 +24,9 @@ class T07SteppingAction : public G4UserSteppingAction
 {
   public:
     T07SteppingAction();
-   ~T07SteppingAction();
+    virtual ~T07SteppingAction();
 
-    void UserSteppingAction();
+    virtual void UserSteppingAction(const G4Step*);
 };
 
 #endif
