@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-08 16:35:06 gunter Exp $
+$Id: History,v 1.2 1999-04-17 07:00:35 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,11 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+17 Apr., 1999 H.Kurashige 
+- Modify SetCuts() and ConstructParticle() in Tst07PhysicsList
+- Modify BeginOfRunAction() and EndOfRunAction() in Tst07RunAction
+- Modify UserSteppingAction() in Tst07SteppingAction
+- Modify BeginOfEventAction() and EndOfEventAction() in Tst07EventAct
 
 September 31, 98 G.Barrand
 - "standardize" the test ; do the prerun in test07.in, 
